fix(modal): fixed render error that causes horizontal scroll in modals

--- a/app/client/stylesheets/components/pu-page.sass
+++ b/app/client/stylesheets/components/pu-page.sass
@@ -92,6 +92,7 @@
         display: block
         width: 100%
         margin-bottom: 20px
+        overflow: hidden
 
         .pu-wrap
             position: relative
